Added admin control panel to the header

--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
           <div class="img-container">
             <img src="Asset/users-icon/kitty_763789.png" alt="admin-icon" />
           </div>
-          <h2 class="admin-name">Mibab</h2>
+          <h2 class="admin-name">Uteh Hingusan</h2>
         </div>
-        <div class="bottom-info"></div>
+        <div class="bottom-info">
+            <div class="img-container">
+                <img src="Asset/users-icon/kitty_763789.png" alt="admin-icon">
+            </div>
+            <div class="greeting">
+                <p>Hi there,</p>
+                <h1>Uteh Hingusan (@grudus)</h1>
+            </div>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
       </header>
       <aside>
         <div class="main-title">
